--- a/convite.html
+++ b/convite.html
@@ -138,7 +138,7 @@
               nb_sides: 5
             },
             image: {
-              src: 'imagens/confete.png', // Substitua com o caminho para a imagem de confete
+              src: 'imagens/confete.png', 
               width: 100,
               height: 100
             }
